--- a/src/XUnitTestProvider/XUnitTestProvider.csproj
+++ b/src/XUnitTestProvider/XUnitTestProvider.csproj
@@ -138,6 +138,8 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="XunitElementFactory.cs" />
+    <Compile Include="XunitTestElementSerializer.cs" />
     <Compile Include="XUnitTestFileExplorer.cs" />
     <Compile Include="UnitTestElementIdentifier.cs" />
     <Compile Include="AttributeWrapper.cs" />
