--- a/src/XUnitTestProvider/XUnitTestProvider.csproj
+++ b/src/XUnitTestProvider/XUnitTestProvider.csproj
@@ -139,6 +139,9 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="TypeUtility.cs" />
+    <Compile Include="XunitTestFakeElement.cs" />
+    <Compile Include="XunitFileExplorerInheritorsConsumer.cs" />
     <Compile Include="XunitElementFactory.cs" />
     <Compile Include="XunitTestElementSerializer.cs" />
     <Compile Include="XUnitTestFileExplorer.cs" />
