--- a/src/XUnitTestProvider.Tests/XUnitTestProvider.Tests.csproj
+++ b/src/XUnitTestProvider.Tests/XUnitTestProvider.Tests.csproj
@@ -36,6 +36,13 @@
       <HintPath>..\..\3rdParty\Moq-3.1.416.3\Moq.dll</HintPath>
     </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="xunit, Version=1.8.0.1549, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\xunit.1.8.0.1549\lib\xunit.dll</HintPath>
+    </Reference>
+    <Reference Include="xunit.extensions">
+      <HintPath>..\..\packages\xunit.extensions.1.8.0.1549\lib\xunit.extensions.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -47,6 +54,9 @@
       <Project>{AE37EF14-4EC4-4D53-A3A8-90BECB3F9566}</Project>
       <Name>XUnitTestProvider</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <PropertyGroup>
     <ReSharperSdkTargets Condition=" '$(ReSharperSdkTargets)' == '' ">$(MSBuildExtensionsPath)\JetBrains\ReSharper.SDK\v6.1</ReSharperSdkTargets>
