--- a/src/XUnitTestProvider.Tests/XUnitTestProvider.Tests.csproj
+++ b/src/XUnitTestProvider.Tests/XUnitTestProvider.Tests.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PsiFileBaseTests.cs" />
+    <Compile Include="UnitTestElementPsiIdentifierTests.cs" />
     <Compile Include="XunitFileExplorerTests.cs" />
     <Compile Include="XunitFileExplorerTestsBase.cs" />
   </ItemGroup>
